--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
 PORT =3000
-DATABASE_URL='mongodb+srv://:LTAD40xfeCoZsWPJ@cluster0.eox1tkk.mongodb.net/myData'
+DATABASE_URL='mongodb+srv://9518aniket:LTAD40xfeCoZsWPJ@cluster0.eox1tkk.mongodb.net/myData'
 
-# 
-JWT_SECRET = co
+# LTAD40xfeCoZsWPJ
+JWT_SECRET = codeschool
+
+# MAIL_HOST = smtp.gmail.com
+# MAIL_USER = pratik04pratik@gmail.com
+# MAIL_PASS = hltjfxdzciesqnmw
 
 MAIL_HOST = smtp.gmail.com
-MAIL_USER = p
-MAIL_PASS = hltjfx
+MAIL_USER = aniketpatil4405@gmail.com
+MAIL_PASS = sbupfemvznwblddy
